@@ -1,8 +1,8 @@
 Package: minqa
 Type: Package
 Title: Derivative-free optimization algorithms by quadratic approximation 
-Version: 1.1.16
-Date: 2011-07-10
+Version: 1.1.17
+Date: 2011-07-14
 Author: Douglas Bates, Katharine M. Mullen, John C. Nash, Ravi Varadhan
 Maintainer: Katharine M. Mullen <katharine.mullen@nist.gov>
 Description: Derivative-free optimization by quadratic approximation based
